# contacts

./: Cargo.toml  README.md
frontend/: Cargo.toml  Dockerfile
frontend/src/: main.rs
frontend/templates/: index.html
server/: Cargo.toml  Dockerfile
server/src/: main.rs
